1.3 (released xx.xx.2013)

* Add patoolib.__version__ (see PEP 396).
  Closes: GH bug #3


1.2 (released 27.6.2013)

* Fix detection of *.gz with newer libmagic versions.
  Closes: GH bug #2


1.1 "Clerks" (released 7.4.2013)

* Add support for zopfli, Googles new zlib compressor.
* Fix an error repacking compressed tar archives with 7z.


1.0 "Robot and Frank" (released 1.3.2013)

* Add support for searching in archive contents.
* Add support for ISO image handling.
* Allow multiple --verbose options to increase program output.
* Add patool.exe to the PATH in the windows installer.
* Fixed Python lzma archive handling.
* Fixed lzop, lrzip and rzip archive handling.
* Fixed Python 3.x support.


0.19 "The Kids Are All Right" (released 21.2.2013)

* Support the lzma module in Python >= 3.3
* Optimize repacking of archives with the same format.
  Closes: GH bug #1


0.18 "Skyfall" (released 15.12.2012)

* Fixed unadf archive listing.
* Added support for Python 3.x.
* Use importlib to find program modules and depend on Python >= 2.7.
* Added support for archmage and chmlib handling CHM (.chm) archives.


0.17 "I am Bruce Lee" (released 4.8.2012)

* Added support for Monkey's Audio Compressor handling APE (.ape) archives.
* Added support for shorten handling SHN (.shn) archives.
* Added support for flac handling FLAC (.flac) archives.
* Added support for the BSD cpio and tar programs.
* Added support for lhasa handling LZH (.lzh, .lha) archives.
* Added support for lcap handling CAB (.cab) archives.
* Added support for shar handling SHAR (.shar) shell archives.
* Added support for unadf handling ADF (.adf) amiga disk archives.
* Removed support for orange handling self-extracting installers.
* Generate standalone Windows .exe and Linux .rpm installer.
* Initialize the internal MIME database correct on all platforms.
* Improved option compatibility for the ar, cpio and tar programs.
* Rename the temporary output directory if it contains multiple files.