@@ -21,7 +21,6 @@ import os
 import shutil
 import stat
 import importlib
-from . import util
 # PEP 396
 from .configuration import Version as __version__
 __all__ = ['list_formats', 'list_archive', 'extract_archive', 'test_archive',
@@ -271,6 +270,8 @@ ProgramModules = {
     'extract_chmlib': 'chmlib',
 }
 
+
+from . import util
 
 def get_archive_format (filename):
     """Detect filename archive format and optional compression."""
